# popup-ai

./: .gitignore  DAEMON.md  LICENSE  README.md  install.sh  io.github.chenkeao.PopupAI.json  meson.build  pyproject.toml  python3-requirements.json  requirements.txt  run-dev.sh  setup-dev.sh  uninstall.sh
data/: io.github.chenkeao.PopupAI.desktop.in  io.github.chenkeao.PopupAI.gschema.xml  io.github.chenkeao.PopupAI.metainfo.xml  io.github.chenkeao.PopupAI.service.in  popup-ai.in  popup-ai.service.in
popup_ai/: ai_service.py  application.py  config.py  constants.py  daemon.py  html_template.py  logger.py  main.py  preferences.py  ui_strings.py  window.py
src/: __init__.py  ai_service.py  application.py  config.py  constants.py  html_template.py  logger.py  main.py  preferences.py  style.css  ui_strings.py  window.py
