[build-system]
requires = ["meson-python"]
build-backend = "mesonpy"

[project]
name = "popup-ai"
version = "0.1.0"
description = "A popup AI assistant for Wayland with GTK4 and Libadwaita"
authors = [{name = "Kyle Chen", email = "keao.chen@outlook.com"}]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygobject>=3.46.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "markdown>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
popup-ai = "popup_ai.main:main"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py311"
